Fix dark mode bug

--- a/portfolio-website/src/app/globals.css
+++ b/portfolio-website/src/app/globals.css
@@ -26,7 +26,7 @@ html {
 	margin: 0;
 	width: 100%;
 	height: 100%;
-	background-color: black;
+	/* background-color: black; */
 }
 
 #hero {
